welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: '=' expected but ';' found.
if (!estFaceMur){avance;getCouleurSol();recule;}
^